# rustfetch

./: Cargo.toml  LICENSE  README.md  README.org
src/: .packages.rs.rustfmt  helpers.rs  logo.rs  main.rs
src/modules/: battery.rs  distro.rs  editor.rs  ifaddrs.rs  kernel.rs  locale.rs  mod.rs  packages.rs  processes.rs  seperator.rs  title.rs  uptime.rs  wmde.rs
