[package]
name = "rsfetch"
version = "0.1.0"
authors = ["ihazpink <ihazpink@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"
humantime = "2.1.0"
colored = "2.0.0"
itertools = "0.10.1"
dirs = "4.0.0"
